--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -9,7 +9,7 @@
   <form [formGroup]="contactForm">
     <ion-list no-lines>
 
-      <div style="margin-bottom: 20px;">
+      <!-- <div style="margin-bottom: 20px;">
         <ion-item class="input_1">
           <ion-input type="email" formControlName="email" placeholder="{{'ENTER_YOUR_EMAIL_ID' | translate}}">
           </ion-input>
@@ -21,7 +21,7 @@
           *ngIf="!contactForm.controls.email.valid && contactForm.controls.email.value!='' && contactForm.controls.email.touched"
           style="margin-top: 8px;" ion-text padding-horizontal color="danger">{{'PLEASE_ENTER_VALID_EMAIL' |
           translate}}</div>
-      </div>
+      </div> -->
 
       <div style="margin-bottom: 20px;">
         <ion-item class="input_1" no-lines>
