--- a/src/pages/home-influencer/home-influencer.html
+++ b/src/pages/home-influencer/home-influencer.html
@@ -15,7 +15,7 @@
     <ion-buttons end>
       <button (click)="openfilter()" class="filerIconBtn" ion-button clear icon-only color="light">
         <!-- <img src="assets/imgs/filter.png" style="width: 25px;"> -->
-        <ion-icon color="light" name="ios-options"></ion-icon>
+        <ion-icon color="light" name="search"></ion-icon>
       </button>
 <!-- 
       <button (click)="openNoti()" style="width: 30px;min-width: unset;" ion-button>
