--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
       <!-- <header-icon></header-icon> -->
       <button (click)="openfilter()" class="filerIconBtn" ion-button clear icon-only color="light">
         <!-- <img src="assets/imgs/filter.png" style="width: 25px;"> -->
-        <ion-icon color="light" name="ios-options"></ion-icon>
+        <ion-icon color="light" name="search"></ion-icon>
       </button>
       <!-- <button (click)="openNoti()" style="width: 30px;min-width: unset;" ion-button>
         <ion-icon style="font-size: 32px;" class="icon-theme" name="md-notifications"></ion-icon>
